[gd_scene load_steps=81 format=3 uid="uid://netxnaflx7ja"]

[ext_resource type="Theme" uid="uid://cdnxxxhxeteub" path="res://Default2.tres" id="1_7237o"]
[ext_resource type="Script" path="res://assets/scenes/ui/choose_character.gd" id="1_n2n2e"]
[ext_resource type="Texture2D" uid="uid://b0sf2uxclgaa6" path="res://assets/sprites/hero3_sprites/Idle.png" id="2_xodfy"]
[ext_resource type="Texture2D" uid="uid://csynhm1j71g2e" path="res://assets/sprites/hero_sprites/Idle_2.png" id="3_1fu3x"]
[ext_resource type="Texture2D" uid="uid://4h6nfwx1lsof" path="res://assets/sprites/hero2_sprites/Idle.png" id="4_q4mr1"]
[ext_resource type="Texture2D" uid="uid://dhtnnpsc48oo7" path="res://assets/sprites/hero2_sprites/Idle_2.png" id="5_ihv30"]
[ext_resource type="Texture2D" uid="uid://wcxbkuiq5qdv" path="res://assets/sprites/policewoman_1/Idle.png" id="7_1rr2h"]
[ext_resource type="Texture2D" uid="uid://b2o8h3rw152ai" path="res://assets/sprites/black_cop/Idle.png" id="8_t42tb"]
[ext_resource type="Texture2D" uid="uid://dim8k7ups1a8p" path="res://assets/sprites/capitain/Idle.png" id="9_6k388"]
[ext_resource type="AudioStream" uid="uid://b6g2wyihknjsn" path="res://audio/button_sound_effect.mp3" id="10_m2m1k"]
[ext_resource type="AudioStream" uid="uid://6txrgh265dxj" path="res://audio/Change_character_sound_effectr.mp3" id="11_grbss"]
[ext_resource type="AudioStream" uid="uid://b0j7g8feqws4h" path="res://audio/Hover_sound_effect.mp3" id="12_4cmj8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_imkvw"]
atlas = ExtResource("2_xodfy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsodj"]
atlas = ExtResource("2_xodfy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s85vh"]
atlas = ExtResource("2_xodfy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_al5u2"]
atlas = ExtResource("2_xodfy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3kib"]
atlas = ExtResource("2_xodfy")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yma2v"]
atlas = ExtResource("2_xodfy")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgpve"]
atlas = ExtResource("2_xodfy")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6axkq"]
atlas = ExtResource("3_1fu3x")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljbdh"]
atlas = ExtResource("3_1fu3x")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg65y"]
atlas = ExtResource("3_1fu3x")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jbq5"]
atlas = ExtResource("3_1fu3x")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehp7j"]
atlas = ExtResource("3_1fu3x")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlkd3"]
atlas = ExtResource("3_1fu3x")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_arqr6"]
atlas = ExtResource("3_1fu3x")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuypm"]
atlas = ExtResource("3_1fu3x")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1101"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kas35"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_668ck"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nm03"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfsb0"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4506"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v7le"]
atlas = ExtResource("4_q4mr1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_alam3"]
atlas = ExtResource("4_q4mr1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr6b0"]
atlas = ExtResource("4_q4mr1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2hgb"]
atlas = ExtResource("4_q4mr1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpsxc"]
atlas = ExtResource("4_q4mr1")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqin7"]
atlas = ExtResource("4_q4mr1")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt3n7"]
atlas = ExtResource("5_ihv30")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_47x2v"]
atlas = ExtResource("5_ihv30")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t502c"]
atlas = ExtResource("5_ihv30")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnopf"]
atlas = ExtResource("5_ihv30")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cwfe"]
atlas = ExtResource("5_ihv30")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ka1sj"]
atlas = ExtResource("5_ihv30")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpe1k"]
atlas = ExtResource("5_ihv30")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuux5"]
atlas = ExtResource("5_ihv30")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wdb6"]
atlas = ExtResource("5_ihv30")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mswc"]
atlas = ExtResource("5_ihv30")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6i4k"]
atlas = ExtResource("5_ihv30")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4fml"]
atlas = ExtResource("7_1rr2h")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvbjl"]
atlas = ExtResource("7_1rr2h")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iock"]
atlas = ExtResource("7_1rr2h")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_unsh2"]
atlas = ExtResource("7_1rr2h")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_re288"]
atlas = ExtResource("7_1rr2h")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jqwd"]
atlas = ExtResource("7_1rr2h")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0atiq"]
atlas = ExtResource("8_t42tb")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtwyq"]
atlas = ExtResource("8_t42tb")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebdpk"]
atlas = ExtResource("8_t42tb")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nprd8"]
atlas = ExtResource("8_t42tb")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f403"]
atlas = ExtResource("8_t42tb")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0no2"]
atlas = ExtResource("8_t42tb")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_utc8m"]
atlas = ExtResource("9_6k388")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba62q"]
atlas = ExtResource("9_6k388")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jk3x"]
atlas = ExtResource("9_6k388")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv2f5"]
atlas = ExtResource("9_6k388")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj877"]
atlas = ExtResource("9_6k388")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg22d"]
atlas = ExtResource("9_6k388")
region = Rect2(640, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_nq1g6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imkvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsodj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s85vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al5u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3kib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yma2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgpve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6axkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljbdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg65y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jbq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehp7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlkd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arqr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuypm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1101")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kas35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_668ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nm03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfsb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4506")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v7le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alam3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr6b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2hgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpsxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqin7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt3n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47x2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t502c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnopf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cwfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka1sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpe1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuux5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wdb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mswc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6i4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4fml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvbjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iock")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_unsh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re288")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jqwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0atiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtwyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebdpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nprd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f403")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0no2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utc8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba62q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jk3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv2f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj877")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg22d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_luno5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wwtk7"]
resource_name = "hero"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_4mae5"]
resource_name = "hero_2"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.73333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 21]
}

[sub_resource type="Animation" id="Animation_7nrvb"]
resource_name = "hero_3"
length = 0.62
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_ea6ry"]
resource_name = "police_1"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [38, 39, 40, 41, 42, 43]
}

[sub_resource type="Animation" id="Animation_6elwl"]
resource_name = "police_2"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [44, 45, 46, 47, 48, 49]
}

[sub_resource type="Animation" id="Animation_kl7s0"]
resource_name = "police_3"
length = 0.51
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [50, 51, 52, 53, 54, 55]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kfb2"]
_data = {
"RESET": SubResource("Animation_luno5"),
"hero": SubResource("Animation_wwtk7"),
"hero_2": SubResource("Animation_4mae5"),
"hero_3": SubResource("Animation_7nrvb"),
"police_1": SubResource("Animation_ea6ry"),
"police_2": SubResource("Animation_6elwl"),
"police_3": SubResource("Animation_kl7s0")
}

[sub_resource type="Animation" id="Animation_vfeag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_aaanb"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h2yts"]
_data = {
"RESET": SubResource("Animation_vfeag"),
"fade_in": SubResource("Animation_aaanb")
}

[node name="ChooseCharacter" type="Node2D"]
script = ExtResource("1_n2n2e")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1282.0
offset_bottom = 724.0
color = Color(0.678944, 0.678944, 0.678944, 1)

[node name="StartGame" type="Button" parent="."]
offset_left = 579.0
offset_top = 412.0
offset_right = 759.0
offset_bottom = 472.0
theme = ExtResource("1_7237o")
text = "Start Game"

[node name="SpriteController" type="Node" parent="."]

[node name="prev" type="Button" parent="SpriteController"]
offset_left = 500.0
offset_top = 250.0
offset_right = 540.0
offset_bottom = 290.0
theme = ExtResource("1_7237o")
text = "<
"

[node name="next" type="Button" parent="SpriteController"]
offset_left = 790.0
offset_top = 250.0
offset_right = 830.0
offset_bottom = 290.0
theme = ExtResource("1_7237o")
text = ">"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpriteController"]
position = Vector2(676, 200)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_nq1g6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteController"]
libraries = {
"": SubResource("AnimationLibrary_0kfb2")
}

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionLayer"]
libraries = {
"": SubResource("AnimationLibrary_h2yts")
}

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_m2m1k")

[node name="ChangeCharacter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_grbss")

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_4cmj8")
volume_db = -20.377

[node name="CharacterName" type="Label" parent="."]
offset_left = 578.0
offset_top = 112.0
offset_right = 758.0
offset_bottom = 172.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Iron fist
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[connection signal="mouse_entered" from="StartGame" to="." method="_on_start_game_mouse_entered"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="SpriteController/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="SpriteController/next" to="." method="_on_next_pressed"]
